# findmyfunding

./: .dockerignore  .env.example  .gitignore  .~lock.Cartographie des financements.xlsx#  CLAUDE.md  Dockerfile  REQUIREMENTS.md  docker-compose.prod.yml  pyproject.toml
data/: Cartographie des financements.xlsx
scripts/: import_excel.py  run_scrape.py
src/findmyfundings/: config.py  database.py  main.py  models.py
src/findmyfundings/routers/: admin.py  api.py  programs.py  search.py
src/findmyfundings/services/: ai_extractor.py  excel_import.py  funding_repo.py  scheduler.py  scraper.py  search_service.py
src/findmyfundings/templates/: base.html  detail.html  index.html
src/findmyfundings/templates/admin/: sources.html
src/findmyfundings/templates/partials/: program_card.html  program_list.html
